# mcp-gnu-units

./: .gitignore  CHANGELOG.md  NOTICE  README.md  TODO  pyproject.toml  run-tests.sh
.github/workflows/: ci.yml  release.yml
docs/: definitions-format.md
src/mcp_gnu_units/: __init__.py  __main__.py  errors.py  jsonfix.py  server.py
src/mcp_gnu_units/data/: definitions.units
src/mcp_gnu_units/engine/: __init__.py  ast.py  builtins.py  convert.py  dimension.py  directives.py  errors.py  evaluator.py  functions.py  lexer.py  loader.py  number.py  parser.py  quantity.py  symbols.py  tables.py
tests/: conftest.py  test_e2e_convert.py  test_e2e_convert_to_si.py  test_errors.py  test_info.py  test_jsonfix.py  test_package.py  test_server.py
tests/engine/: conftest.py  test_convert.py  test_loader.py  test_nonlinear.py  test_number.py  test_oracle.py  test_parser.py  test_quantity.py  test_tables.py
